--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,6 +10,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        buildConfigField("String", "API_KEY", "API_KEY")
     }
     buildTypes {
         release {
@@ -31,3 +32,4 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
 
 }
+
