Removed APIKey from code. Used BuildConfig reference instead.

--- a/gradle.properties
+++ b/gradle.properties
@@ -17,5 +17,5 @@ org.gradle.jvmargs=-Xmx1536m
 android.useAndroidX=true
 # Automatically convert third-party libraries to use AndroidX
 android.enableJetifier=true
-API_KEY = "TEST"
+API_KEY = "a7901e37a265259bfaab23ef7eefa86e"
 
